--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,8 @@ google-crc32c==1.7.1
 google-resumable-media==2.7.2
 googleapis-common-protos==1.70.0
 grpcio==1.71.0
+gunicorn
+
 grpcio-status==1.71.0
 httplib2==0.22.0
 idna==3.10
